--- a/index.html
+++ b/index.html
@@ -1,14 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architect</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/842c3e719f.js" crossorigin="anonymous"></script>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul> <a href="">
+                    <li>Home</li>
+                </a><a href="">
+                    <li>About</li>
+                </a><a href="">
+                    <li>Contact Us</li>
+                </a><a href="">
+                    <li>Login</li>
+                </a></ul>
+        </nav>
+        <div class="banner">
+            <h3>Brand New <br> Group of Architects</h3>
+            <p>“Architects plan, design, and observe construction of facilities used for human occupancy and of other
+                structures” (The Top 100: The Fastest-Growing Careers for the 21st Century, Fifth Edition 27).</p>
+            <button>Explore More</button>
+            <div class="image"></div>
+        </div>
+    </header>
+    <main>
+        <section class="features-quick-list">
+            <div class="quick-list-images">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="quick-list-description">
+                <h3>
+                    <span class="span1">Quick list </span>of Our <br><span class="span2">Features</span>
+                </h3>
+                <p> Plan, develop and implement building designs. We compile feasibility reports, determine
+                    environmental impact, create project proposals, estimate costs, determine timelines and oversee
+                    construction processes. Completely free trial, no card required.</p>
+                <button>Explore More</button>
+            </div>
+        </section>
+        <section class="interesting-features">
+            <div class="description">
+                <h3>Features you will <br> love & enjoy</h3>
+                <p>A great architect has an eye for design, the creativity to make something unique, and the technical
+                    know-how to build a solid and functional structure. If you want to find the right balance of skills.
+                </p>
+                <div class="features-box">
+                    <h4>Desktop & Mobile Verion</h4>
+                    <p>A well-written architect job description and salary (if available) will help you sell your firm
+                        to top candidates while accurately explaining the roles responsibilities and desired attributes
+                    </p>
+                </div>
+                <div class="features-box">
+                    <h4>Desktop & Mobile Verion</h4>
+                    <p>A well-written architect job description and salary (if available) will help you sell your firm
+                        to top candidates while accurately explaining the roles responsibilities and desired attributes
+                    </p>
+                </div>
+                <div class="features-box">
+                    <h4>Desktop & Mobile Verion</h4>
+                    <p>A well-written architect job description and salary (if available) will help you sell your firm
+                        to top candidates while accurately explaining the roles responsibilities and desired attributes
+                    </p>
+                </div>
+                <div class="features-box">
+                    <h4>Desktop & Mobile Verion</h4>
+                    <p>A well-written architect job description and salary (if available) will help you sell your firm
+                        to top candidates while accurately explaining the roles responsibilities and desired attributes
+                    </p>
+                </div>
+            </div>
+            <img src="images/architect.png" alt="">
+            <div class="button-container"> <button>
+                    <h3>10+Year</h3>
+                    <span>Experience</span>
+                </button></div>
+        </section>
+        <section class="some-facts">
+            <h3>Some Facts</h3>
+            <p>feasibility reports, determine
+                environmental impact, create project proposals, estimate costs, determine timelines and oversee
+                construction processes.</p>
+            <div class="fact-box-container">
+                <div class="fact-box">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h4>54</h4>
+                    <p>Award winning</p>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/projects.png" alt="">
+                    <h4>1458</h4>
+                    <p>Projects Finished</p>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/customers.png" alt="">
+                    <h4>
+                        566
+                    </h4>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/email.png" alt="">
+                    <h4>39000</h4>
+                    <p>Email sent</p>
+                </div>
+            </div>
+        </section>
+
+<section class="top-employees">
+<h3>Our Top Employees</h3>
+<div class="employee-container">
+    <div class="employee">
+        <img src="images/harry1.jpg" alt="">
+        <h3>Harry Potter</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nulla.</p>
+    </div>
+    <div class="employee">
+        <img src="images/harry2.jpg" alt="">
+        <h3>Hermoine</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, nobis!</p>
+    </div>
+    <div class="employee">
+        <img src="images/harry3.jpg" alt="">
+        <h3>Ronald Weasly</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, reprehenderit?</p>
+    </div>
+    <div class="employee">
+        <img src="images/harry4.jpg" alt="">
+        <h3>Navile</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, inventore.</p>
+    </div>
+</div>    
+</section>
+
+
+        <section class="sponsor-section">
+<h1>Our Sponspors</h1>
+<p>There are many variations of passages of Architects available, <br>but the majority have suffered alteration.</p>
+<div class="sponsor">
+    <img src="images/sponsors/spotify.png" alt=""><img src="images/sponsors/amazon.png" alt=""><img src="images/sponsors/google.png" alt=""><img src="images/sponsors/telerama.png" alt=""><img src="images/sponsors/figma.png" alt="">
+</div>
+        </section>
+    </main>
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
+
 </html>
